[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/StartMenu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -26.5
margin_right = 73.0
margin_bottom = 26.5

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 146.0
margin_bottom = 14.0
text = "PlatformerVersus"
align = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 146.0
margin_bottom = 38.0
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 146.0
margin_bottom = 62.0
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 146.0
margin_bottom = 86.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
